Updated prometheus dockerfile

--- a/prometheus/Dockerfile
+++ b/prometheus/Dockerfile
@@ -1,6 +1,6 @@
 FROM prom/prometheus:latest
 
-COPY ./prometheus /etc/prometheus/prometheus.yml
+COPY ./prometheus.yml /etc/prometheus/prometheus.yml
 
 EXPOSE     9090
 VOLUME     [ "/prometheus" ]
