--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "9090:9090"
     links:
       - currency
+      - statsd
   currency:
     build: 
       context: ./currency
@@ -16,3 +17,19 @@ services:
       - "9091:9091"
     environment:
       - SLEEP_TIME
+    links:
+      - statsd
+  prometheus:
+    image: prom/prometheus
+    links:
+      - statsd
+    volumes: 
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+  statsd:
+    image: prom/statsd-exporter
+  grafana:
+    image: grafana/grafana
+    ports:
+      - "3000:3000"
+    links:
+      - prometheus
