--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,20 +12,21 @@ services:
       - statsd
     environment:
       - MODE
-  currency:
-    build: 
-      context: ./currency
-      dockerfile: Dockerfile
-    ports:
-      - "9091:9091"
+      - SERVERS
   currencyslow:
     build: 
       context: ./currency
       dockerfile: Dockerfile
     ports:
-      - "9092:9091"
+      - "9091:9091"
     environment:
       - SLEEP_TIME
+  currency:
+    build: 
+      context: ./currency
+      dockerfile: Dockerfile
+    ports:
+      - "9092:9091"
   prometheus:
     image: prom/prometheus
     links:
